# legarda

./: .env.template  Makefile  README.md
src/client/: next.config.js  package.json  tsconfig.json
src/client/src/components/: AutoSuggest.tsx  Footer.tsx  (+1 more)
src/server/: .gitignore  manage.py  pyproject.toml
src/server/migrations/versions/: 05398966fbf0_define_blacklist_token_model.py  06e2a2f3c704_make_product_name_unique.py  07d392ebf9e1_remove_dummy_model_and_define_user_model.py  2feea7c16c54_define_purchase_model.py  48c825df4cd1_initial_database_migration.py  81261b2b3706_create_one_to_many_and_many_to_many_.py  81325a3b1f04_change_some_activity_column_names.py  8a3e76d43f0e_define_transaction_model_and_create_.py  b89c973af8d3_create_product_model_and_product_.py  d470411f8891_include_more_details_on_user_model.py  da6111ec00af_define_activity_model_to_store_user_.py
src/server/src/legarda/: __init__.py
src/server/src/legarda/api/: __init__.py  config.py
src/server/src/legarda/api/controllers/: activity_controller.py  auth_controller.py  category_controller.py  product_controller.py  purchase_controller.py  user_controller.py
src/server/src/legarda/api/models/: __init__.py  activity.py  blacklist.py  category.py  dummy.py  helper.py  product.py  purchase.py  transaction.py  user.py
src/server/src/legarda/api/services/: acitivity_service.py  auth_service.py  blacklist_service.py  category_service.py  product_service.py  purchase_service.py  user_service.py
src/server/src/legarda/api/utils/: dto.py
src/server/tests/: test_config.py  test_legarda.py
(+34 files in other folders)
